# crypto_monitor

./: CMakeLists.txt  README.md  SetPath.cmake
Utils/: utils_crypto.h
data/: ADADOWNUSDT.csv  BTCSTUSDT.csv  ETHTUSD.csv  FILBUSD.csv
src/: Binance.h  DataPath.h  DataPath.h.in  Orchestrator.cpp  Orchestrator.h  QueryCrypto.cpp  QueryCrypto.h  Variables.h  Variables.h.in  main.cpp  ncurses_display.cpp  ncurses_display.h
test/: response_test.cpp
